# my-finantial-manager

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
backend/tests/: __init__.py  test_api.py
docs/: business-specification.md  plan.md
frontend/: next.config.js  package.json  playwright.config.ts
frontend/src/pages/: index.tsx  performance.tsx  portfolio.tsx
frontend/src/pages/assets/: add.tsx
frontend/src/pages/prices/: update.tsx
frontend/src/styles/: globals.css
frontend/tests/e2e/: 01-dashboard.spec.ts  02-portfolio.spec.ts  03-asset-addition.spec.ts  04-performance.spec.ts  05-price-update.spec.ts  06-integration.spec.ts  README.md  test-utils.ts
